# diplomaBackend

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  serving-docker.config
app/: __init__.py  logger.py  main.py  tasks.py
app/api/: __init__.py  routers.py
app/api/v1/: React.py  __init__.py
app/beanie/: beanie.py
app/core/: __init__.py  conf.py  registrar.py
app/middlewares/: access_middleware.py
app/services/: __init__.py
app/services/aws/: __init__.py  aws.py
app/services/beani/: __init__.py  beani.py
app/services/beanie/: beanie.py
app/services/celery/: celery.py
app/services/graphql/: mutation.py  query.py
app/services/ml/: __init__.py  faceMl.py
app/services/mongo/: mongo.py
app/utils/: __init__.py  health_check.py  openapi.py  timezone.py
nginx/: nginx.conf
prometheus_data/: prometheus.yml
